tests/fixtures/negative/style/UseIsNullOrEmpty.kt
package fixtures.negative.style

fun check(x: String?) {
    if (x.isNullOrEmpty()) {
        println("nothing")
    }
}
